added git repo for package.sjon

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "author": "kimserey",
   "repository": {
     "type": "git",
-    "url": "git://github.com/username/repository.git"
+    "url": "https://github.com/Kimserey/HelloWorldFable.git"
   }
 }
